--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "electron-updater-example",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "main": "main.js",
   "description": "electron-updater example project",
   "author": "Matt Haggard",
   "scripts": {
+    "start": "electron .",
     "publish": "electron-builder -p always"
   },
   "devDependencies": {
