--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-updater-example",
-  "version": "0.8.2",
+  "version": "0.8.3",
   "main": "main.js",
   "description": "electron-updater example project",
   "author": "Matt Haggard",
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "electron": "^14.0.1",
-    "electron-builder": "^22.11.7",
+    "electron-builder": "^23.0.2",
     "electron-notarize": "^1.1.1"
   },
   "dependencies": {
@@ -20,6 +20,13 @@
   "build": {
     "appId": "com.github.iffy.electronupdaterexample",
     "afterSign": "./build/notarize.js",
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "kndtime",
+        "repo": "electron-updater-example"
+      }
+    ],
     "mac": {
       "category": "your.app.category.type"
     },
